--- a/src/assets/styles/portfolio.scss
+++ b/src/assets/styles/portfolio.scss
@@ -78,6 +78,7 @@
   .skills_description_parent_container {
     width: 90%;
     margin: 0 auto;
+    gap: 30px;
 
     .MuiTypography-root {
       font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
@@ -89,7 +90,7 @@
 
       .description_title {
         font-weight: 600;
-        font-size: 42px;
+        font-size: 32px;
         position: relative;
         display: inline-block;
         color: #020f20;
@@ -98,10 +99,10 @@
       .description_title::after {
         content: "";
         width: 100%;
-        height: 25px; /* Adjust height to fit the wave size */
+        height: 15px; /* Adjust height to fit the wave size */
         background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 10" preserveAspectRatio="none"><path d="M0 5 Q 25 10, 50 5 T 100 5" fill="none" stroke="black" stroke-width="2"/></svg>');
         position: absolute;
-        bottom: -21px; /* Adjust to position the wave correctly */
+        bottom: -15px; /* Adjust to position the wave correctly */
         left: 0;
         color: #020f20;
       }
