--- a/src/assets/styles/portfolio.scss
+++ b/src/assets/styles/portfolio.scss
@@ -161,14 +161,17 @@
           background-color: #ffffff;
 
           .MuiCardContent-root {
-            padding: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
 
-            .MuiTypography-root {
+            .company_heading.MuiTypography-root {
               display: flex;
               gap: 20px;
               font-size: 32px;
               font-weight: 600;
-              padding: 20px 0px 10px 20px;
+              //padding: 20px 0px 10px 20px;
               color: #020f20;
               text-decoration: underline;
               text-underline-offset: 15px;
@@ -177,6 +180,99 @@
             .company_logo img {
               width: 60px;
               object-fit: cover;
+            }
+
+            .company_profile {
+              font-size: 26px;
+            }
+            .company_profile_name {
+              font-weight: 600;
+            }
+            .company_brief {
+              font-size: 18px;
+            }
+            .company_project_name {
+              font-weight: 600;
+            }
+
+            .company_project_exp_list {
+              .company_project_exp_listitem {
+                padding-left: 0px;
+                font-family: "Gill Sans", "Gill Sans MT", Calibri,
+                  "Trebuchet MS", sans-serif;
+
+                &:last-child {
+                  font-weight: 600;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .project_description_parent_container {
+    width: 90%;
+    margin: 0 auto;
+    gap: 40px;
+    margin-bottom: 35px;
+
+    .MuiTypography-root {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+    }
+
+    .project_description_container_content {
+      display: flex;
+    }
+
+    .project_description_tiles {
+      max-width: 72%; // Full width of the container
+      margin: 0 auto;
+      overflow-x: auto; // Enable horizontal scrolling
+
+      .project_description_tiles_list {
+        display: flex; // Flexbox to align items in a single row
+        gap: 30px; // Space between cards
+        overflow-x: auto; // Horizontal scrolling
+        width: max-content;
+      }
+
+      .desc_tile {
+        flex: 0 0 auto; // Prevents flexbox shrinking, ensures fixed width
+        width: 300px; // Card width
+        margin-bottom: 10px;
+
+        .prj_img {
+          height: 170px;
+          width: 100%;
+          object-fit: cover;
+        }
+        .MuiCard-root {
+          height: 100%;
+          background-color: #020f20;
+          border-radius: 10px;
+
+          .MuiCardContent-root {
+            .prj_name.MuiTypography-root {
+              font-size: 32px;
+              color: white;
+            }
+
+            .prj_desc.MuiTypography-root {
+              font-size: 20px;
+              color: white;
+              word-wrap: break-word;
+            }
+          }
+          .MuiCardActions-root {
+            .MuiButtonBase-root a {
+              color: white;
+              font-weight: 600;
+              text-decoration: none;
+              text-transform: capitalize;
+              font-size: 16px;
             }
           }
         }
