--- a/src/assets/styles/portfolio.scss
+++ b/src/assets/styles/portfolio.scss
@@ -130,30 +130,6 @@
       border-radius: 40px;
       padding: 25px;
 
-      .work_exp_left_div {
-        display: flex;
-
-        .MuiCard-root {
-          background: #ffffff;
-          display: flex;
-          align-items: center;
-          width: 75%;
-          border-radius: 20px;
-          justify-content: center;
-          height: 20%;
-
-          .MuiCardContent-root {
-            padding: 0;
-
-            .MuiTypography-root {
-              font-size: 32px;
-              font-weight: 600;
-              color: #020f20;
-            }
-          }
-        }
-      }
-
       .work_exp_right_div {
         .MuiCard-root {
           height: 100%;
@@ -189,14 +165,22 @@
               font-weight: 600;
             }
             .company_brief {
-              font-size: 18px;
+              font-size: 22px;
+              display: flex;
+              align-items: center;
+              gap: 5px;
             }
             .company_project_name {
+              background: #020f20;
               font-weight: 600;
+              color: white;
+              padding: 10px;
+              border-radius: 25px;
             }
 
             .company_project_exp_list {
               .company_project_exp_listitem {
+                font-size: 20px;
                 padding-left: 0px;
                 font-family: "Gill Sans", "Gill Sans MT", Calibri,
                   "Trebuchet MS", sans-serif;
@@ -274,6 +258,69 @@
               text-transform: capitalize;
               font-size: 16px;
             }
+          }
+        }
+      }
+    }
+  }
+
+  .footer_parent_container {
+    background-color: #020f20;
+    color: white;
+    width: 100%;
+    display: flex;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -50px;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background-color: #ffffff;
+      border-radius: 0% 0% 53% 53%;
+    }
+
+    .MuiTypography-root {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+    }
+
+    .footer_child_container {
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+      margin: 0 auto;
+      position: relative;
+      z-index: 1;
+
+      .footer_description_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+
+        .description_title {
+          font-weight: 600;
+          font-size: 36px;
+        }
+
+        .footer_phone_description {
+          display: flex;
+          align-items: center;
+          width: 100%;
+          gap: 5px;
+
+          .MuiSvgIcon-root {
+            height: 26px;
+            width: 26px;
+          }
+
+          .description_phone {
+            font-size: 28px;
           }
         }
       }
