--- a/src/assets/styles/portfolio.scss
+++ b/src/assets/styles/portfolio.scss
@@ -110,6 +110,11 @@
     .skills_description_container_content {
       display: flex;
     }
+
+    .skills_bar_chart {
+      width: 70%;
+      margin: 0 auto;
+    }
   }
 
   .work_experience_parent_container {
@@ -128,7 +133,7 @@
       width: 70%;
       min-height: 550px;
       border-radius: 40px;
-      padding: 25px;
+      padding: 20px;
 
       .work_exp_right_div {
         .MuiCard-root {
@@ -147,7 +152,6 @@
               gap: 20px;
               font-size: 32px;
               font-weight: 600;
-              //padding: 20px 0px 10px 20px;
               color: #020f20;
               text-decoration: underline;
               text-underline-offset: 15px;
@@ -321,6 +325,123 @@
 
           .description_phone {
             font-size: 28px;
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 854px) {
+    gap: 30px;
+
+    .portfolio_headings {
+      .description_title {
+        font-size: 30px;
+        text-decoration: underline;
+        text-underline-offset: 10px;
+      }
+      .description_title::after {
+        display: none;
+      }
+    }
+
+    .brief_description_parent_container {
+      &::after {
+        display: none;
+      }
+
+      .brief_description_child_container {
+        .brief_description_container_content {
+          margin-top: 30px;
+
+          .description_title {
+            font-weight: 600;
+            font-size: 38px;
+          }
+
+          .description {
+            font-size: 21px;
+            width: 100%;
+            text-align: justify;
+          }
+        }
+
+        .brief_description_container_icons {
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+          flex-direction: row;
+        }
+      }
+    }
+
+    .skills_description_parent_container {
+      .skills_description_container_content {
+        display: flex;
+      }
+
+      .skills_bar_chart {
+        display: none;
+      }
+    }
+
+    .work_experience_parent_container {
+      .work_experience_child_container {
+        width: 100%;
+        border-radius: 20px;
+        padding: 5px;
+
+        .work_exp_right_div {
+          .MuiCard-root {
+            .MuiCardContent-root {
+              .company_heading.MuiTypography-root {
+                font-size: 30px;
+                text-decoration: none;
+                align-items: center;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .project_description_parent_container {
+      .project_description_tiles {
+        max-width: 90%;
+
+        .project_description_tiles_list {
+          gap: 20px;
+        }
+      }
+    }
+
+    .footer_parent_container {
+      height: 210px;
+
+      &::after {
+       display: none;
+      }
+
+      .footer_child_container { 
+        width: 90%;
+
+        .footer_description_container {
+
+          .description_title {
+            font-weight: 500;
+            font-size: 26px;
+          }
+
+          .footer_phone_description {
+
+            .MuiSvgIcon-root {
+              height: 24px;
+              width: 24px;
+            }
+
+            .description_phone {
+              font-size: 26px;
+            }
           }
         }
       }
